# small-3d-museum

./: CMakeLists.txt  README.md
dependencies/: config.txt  visibility.txt
dependencies/models_srgge/: torus.ply
dependencies/shaders/: basic.frag
shaders/: basic.vert
src/map/: Map.hpp  map.txt
src/museum/: AABox.cpp  AABox.hpp  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  ConfigurationFile.cpp  ConfigurationFile.hpp  GraphicsObject.cpp  GraphicsObject.hpp  Octree.cpp  Octree.hpp  Plane.cpp  Plane.hpp  Scene.cpp  Scene.h  TimeCriticalRendering.cpp  TimeCriticalRendering.hpp  TriangleMesh.cpp  TriangleMesh.h  UniformGrid.hpp  VertexClustering.cpp  VertexClustering.hpp  main.cpp  map.txt
src/visibility/: CMakeLists.txt  main.cpp
